fix bug that info window not shown after recenter; fix bug that resolution is bad on mobile device; added caching on client side

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -3,10 +3,6 @@ html, body, #map-canvas{
     width: 100%;
 }
 
-#map-canvas {
-    height:		550px;
-}
-
 .chatInput {
 
 }
@@ -22,4 +18,14 @@ ul li {
 
 #chatInput {
     width: 100%;
+}
+
+#map-canvas {
+    height:		550px;
+}
+
+#map-canvas.fullscreen {
+    position: fixed;
+    width:100%;
+    height: 100%;
 }
